Cleaned prints and comments

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jimena/.local/lib/python3.12/site-packages/nltk/metrics/association.py:26: UserWarning: A NumPy version >=1.22.4 and <2.3.0 is required for this version of SciPy (detected version 2.3.1)\n",
-      "  from scipy.stats import fisher_exact\n",
       "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to /Users/jimena/nltk_data...\n",
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -165,7 +163,7 @@
     "    random_forest.fit(features_train, labels_train)\n",
     "    rf_predict = random_forest.predict(features_test)\n",
     "\n",
-    "    # Added zero_division to handle 0.0 precision warning \n",
+    "    # Added zero_division to handle 0.0 precision warning for LD class\n",
     "    random_forest_f1 = f1_score(labels_test, rf_predict, average=\"macro\")\n",
     "    random_forest_report = classification_report(labels_test, rf_predict, zero_division=0)\n",
     "\n",
@@ -183,21 +181,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9e7b6256",
-   "metadata": {},
-   "source": [
-    "Liberal Democrat is not being predicted with the Random Forest classifier. Getting a warning message solved with zero_division.\n",
-    "\n",
-    "Random Forest classifier\n",
-    "f1 score: 0.45422557608349956\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.5933446121140653"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -264,14 +249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Implement a new custom tokenizer and pass it to the tokenizer argument of Tfidfvectorizer. \n",
-    "Try to achieve the best classification performance with same number of features (3000) and the same three classifiers. \n",
-    "Print the classification report for the best performing classifier using your tokenizer.\"\"\"\n",
+    "\"\"\" Custom tokenizer for best classification performance with same number of features (3000) and the same classifiers.\"\"\"\n",
     "\n",
     "stop_words = set(stopwords.words('english'))\n",
     "lemmatizer = WordNetLemmatizer()\n",
@@ -293,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "a1872341",
    "metadata": {},
    "outputs": [],
@@ -307,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "adc184bc",
    "metadata": {},
    "outputs": [
@@ -324,32 +307,32 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.48263671992623136\n",
+      "f1 score: 0.5051579755563204\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.74      0.98      0.84       964\n",
-      "                 Labour       0.77      0.48      0.59       463\n",
-      "       Liberal Democrat       1.00      0.02      0.04        54\n",
-      "Scottish National Party       0.88      0.32      0.46       136\n",
+      "           Conservative       0.73      0.96      0.83       964\n",
+      "                 Labour       0.75      0.48      0.58       463\n",
+      "       Liberal Democrat       1.00      0.06      0.11        54\n",
+      "Scottish National Party       0.90      0.35      0.50       136\n",
       "\n",
-      "               accuracy                           0.75      1617\n",
-      "              macro avg       0.85      0.45      0.48      1617\n",
-      "           weighted avg       0.77      0.75      0.71      1617\n",
+      "               accuracy                           0.74      1617\n",
+      "              macro avg       0.85      0.46      0.51      1617\n",
+      "           weighted avg       0.76      0.74      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.6267792919500319\n",
+      "f1 score: 0.6252689802421786\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.83      0.93      0.88       964\n",
-      "                 Labour       0.74      0.71      0.73       463\n",
+      "           Conservative       0.83      0.93      0.87       964\n",
+      "                 Labour       0.74      0.70      0.72       463\n",
       "       Liberal Democrat       0.89      0.15      0.25        54\n",
       "Scottish National Party       0.80      0.55      0.65       136\n",
       "\n",
-      "               accuracy                           0.81      1617\n",
-      "              macro avg       0.82      0.58      0.63      1617\n",
-      "           weighted avg       0.81      0.81      0.79      1617\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.81      0.58      0.63      1617\n",
+      "           weighted avg       0.80      0.80      0.79      1617\n",
       "\n"
      ]
     }
@@ -358,7 +341,7 @@
     "vectorizer = TfidfVectorizer(\n",
     "    tokenizer=custom_tokenizer_nltk, \n",
     "    preprocessor=None, lowercase=False, stop_words=None, \n",
-    "    max_features=3000, ngram_range=(1, 3), min_df=3\n",
+    "    max_features=3000, ngram_range=(1, 3)\n",
     "    )\n",
     "\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
@@ -396,12 +379,26 @@
     "\n",
     "min_df: improves SVM not RF\n",
     "3 0.48263671992623136 worst\n",
-    "3 0.6267792919500319 best "
+    "3 0.6267792919500319 best \n",
+    "\n",
+    "Training with weighted_class: balanced\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.517423061055631\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.7173873440581564"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0bf8d04",
+   "metadata": {},
+   "source": [
+    "After running diffrent values, the reducuction of very common words doesn't make any changes. But performance improves for the SVM classifier removing tokens present in fewer that 3 documments and decreces for the Random Forest classifier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "17e10f7f",
    "metadata": {},
    "outputs": [],
@@ -422,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "id": "5a8ea34a",
    "metadata": {},
    "outputs": [
@@ -433,50 +430,16 @@
       "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest classifier\n",
-      "f1 score: 0.3177120531855518\n",
-      "Classification report:\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.66      1.00      0.80       964\n",
-      "                 Labour       0.82      0.28      0.42       463\n",
-      "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       1.00      0.03      0.06       136\n",
-      "\n",
-      "               accuracy                           0.68      1617\n",
-      "              macro avg       0.62      0.33      0.32      1617\n",
-      "           weighted avg       0.71      0.68      0.60      1617\n",
-      "\n",
-      "SVM linear classifier\n",
-      "f1 score: 0.5628320204715067\n",
-      "Classification report:\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.82      0.94      0.88       964\n",
-      "                 Labour       0.75      0.70      0.72       463\n",
-      "       Liberal Democrat       1.00      0.02      0.04        54\n",
-      "Scottish National Party       0.83      0.49      0.62       136\n",
-      "\n",
-      "               accuracy                           0.80      1617\n",
-      "              macro avg       0.85      0.54      0.56      1617\n",
-      "           weighted avg       0.81      0.80      0.78      1617\n",
-      "\n"
-     ]
     }
    ],
    "source": [
-    "vectorizer = TfidfVectorizer(tokenizer=lambda x: x.split(), preprocessor=None, lowercase=False)\n",
+    "vectorizer = TfidfVectorizer(tokenizer=lambda x: x.split(), preprocessor=None, lowercase=False, max_features=3000, ngram_range=(1, 3))\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
     "labels = df['party']\n",
     "\n",
-    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "# features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
     "\n",
-    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
+    "# random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
    ]
   },
   {
@@ -486,28 +449,9 @@
    "source": [
     "Lower performance and less efficient using spaCy.\n",
     "Random Forest classifier\n",
-    "f1 score: 0.3177120531855518\n",
+    "f1 score: 0.468484258108505\n",
     "SVM linear classifier\n",
-    "f1 score: 0.5628320204715067"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0bf8d04",
-   "metadata": {},
-   "source": [
-    "After running diffrent values, the reducuction of very common words doesn't make any changes. But performance improves for the SVM classifier removing tokens present in fewer that 3 documments and decreces for the Random Forest classifier."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6095045",
-   "metadata": {},
-   "source": [
-    "For the custom tokenizer will try first to clean the text as in the parsing unwanted characters like  \\n, \\n\\n, ', ., -- were observed (may try with NLTK and then with spaCy).\n",
-    "Will try also with up to 2 ngrams.\n",
-    "Will try removing rare tokens.\n",
-    "Will try removing very frequent words that may be used by every party and may not be distinctive."
+    "f1 score: 0.5432385082627259"
    ]
   }
  ],
