--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
     "    clean_tokens = []\n",
     "    for token in tokens:\n",
     "       token = token.lower()\n",
-    "       if token.isalpha() and token not in stop_words:\n",
+    "       if token.isalpha():\n",
     "        lemma = lemmatizer.lemmatize(token)\n",
     "        if len(token) > 1:\n",
     "           clean_tokens.append(lemma)\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "adc184bc",
    "metadata": {},
    "outputs": [
@@ -299,6 +299,8 @@
      "output_type": "stream",
      "text": [
       "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n",
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:402: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['ha', 'u', 'wa'] not in stop_words.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -307,32 +309,32 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.5051579755563204\n",
+      "f1 score: 0.4973471783549753\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.73      0.96      0.83       964\n",
-      "                 Labour       0.75      0.48      0.58       463\n",
-      "       Liberal Democrat       1.00      0.06      0.11        54\n",
-      "Scottish National Party       0.90      0.35      0.50       136\n",
+      "           Conservative       0.74      0.97      0.84       964\n",
+      "                 Labour       0.75      0.47      0.58       463\n",
+      "       Liberal Democrat       1.00      0.04      0.07        54\n",
+      "Scottish National Party       0.83      0.36      0.50       136\n",
       "\n",
       "               accuracy                           0.74      1617\n",
-      "              macro avg       0.85      0.46      0.51      1617\n",
+      "              macro avg       0.83      0.46      0.50      1617\n",
       "           weighted avg       0.76      0.74      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.6252689802421786\n",
+      "f1 score: 0.6085345631483556\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.83      0.93      0.87       964\n",
-      "                 Labour       0.74      0.70      0.72       463\n",
-      "       Liberal Democrat       0.89      0.15      0.25        54\n",
-      "Scottish National Party       0.80      0.55      0.65       136\n",
+      "           Conservative       0.84      0.93      0.88       964\n",
+      "                 Labour       0.74      0.72      0.73       463\n",
+      "       Liberal Democrat       0.86      0.11      0.20        54\n",
+      "Scottish National Party       0.79      0.52      0.63       136\n",
       "\n",
-      "               accuracy                           0.80      1617\n",
-      "              macro avg       0.81      0.58      0.63      1617\n",
-      "           weighted avg       0.80      0.80      0.79      1617\n",
+      "               accuracy                           0.81      1617\n",
+      "              macro avg       0.80      0.57      0.61      1617\n",
+      "           weighted avg       0.81      0.81      0.79      1617\n",
       "\n"
      ]
     }
@@ -385,7 +387,13 @@
     "Random Forest classifier\n",
     "f1 score: 0.517423061055631\n",
     "SVM linear classifier\n",
-    "f1 score: 0.7173873440581564"
+    "f1 score: 0.7173873440581564\n",
+    "\n",
+    "with Stopwords English in Vectorizer:\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.5131065386234979\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.6080800017134234"
    ]
   },
   {
