--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -102,20 +102,14 @@
     "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
     "\n",
     "# print(features_train.shape, features_test.shape)\n",
-    "# print(labels_train.value_counts(normalize=True))   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90e0f82d",
-   "metadata": {},
-   "source": [
-    "The dataset is imbalanced (Conservative: 0.596103, Labour: 0.286686, Scottish National Party: 0.083965, Liberal Democrat 0.033246)"
+    "# print(labels_train.value_counts(normalize=True))\n",
+    "\n",
+    "#  The dataset is imbalanced (Conservative: 0.596103, Labour: 0.286686, Scottish National Party: 0.083965, Liberal Democrat 0.033246)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -182,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -236,20 +230,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "93c6e74b",
-   "metadata": {},
-   "source": [
-    "Random Forest classifier\n",
-    "f1 score: 0.47930475175651455\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.5854220473255666\n",
-    "Adding bigrams and trigrams improved F1 score for RF, not accuracy. Wrost F1 score for SVM."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 73,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -264,7 +246,7 @@
     "    clean_tokens = []\n",
     "    for token in tokens:\n",
     "       token = token.lower()\n",
-    "       if token.isalpha():\n",
+    "       if token.isalpha() and token not in stop_words:\n",
     "        lemma = lemmatizer.lemmatize(token)\n",
     "        if len(token) > 1:\n",
     "           clean_tokens.append(lemma)\n",
@@ -276,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "a1872341",
    "metadata": {},
    "outputs": [],
@@ -290,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "adc184bc",
    "metadata": {},
    "outputs": [
@@ -299,8 +281,6 @@
      "output_type": "stream",
      "text": [
       "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
-      "  warnings.warn(\n",
-      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:402: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['ha', 'u', 'wa'] not in stop_words.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -309,31 +289,31 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.4973471783549753\n",
+      "f1 score: 0.48263671992623136\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.74      0.97      0.84       964\n",
-      "                 Labour       0.75      0.47      0.58       463\n",
-      "       Liberal Democrat       1.00      0.04      0.07        54\n",
-      "Scottish National Party       0.83      0.36      0.50       136\n",
+      "           Conservative       0.74      0.98      0.84       964\n",
+      "                 Labour       0.77      0.48      0.59       463\n",
+      "       Liberal Democrat       1.00      0.02      0.04        54\n",
+      "Scottish National Party       0.88      0.32      0.46       136\n",
       "\n",
-      "               accuracy                           0.74      1617\n",
-      "              macro avg       0.83      0.46      0.50      1617\n",
-      "           weighted avg       0.76      0.74      0.71      1617\n",
+      "               accuracy                           0.75      1617\n",
+      "              macro avg       0.85      0.45      0.48      1617\n",
+      "           weighted avg       0.77      0.75      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.6085345631483556\n",
+      "f1 score: 0.6267792919500319\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.84      0.93      0.88       964\n",
-      "                 Labour       0.74      0.72      0.73       463\n",
-      "       Liberal Democrat       0.86      0.11      0.20        54\n",
-      "Scottish National Party       0.79      0.52      0.63       136\n",
+      "           Conservative       0.83      0.93      0.88       964\n",
+      "                 Labour       0.74      0.71      0.73       463\n",
+      "       Liberal Democrat       0.89      0.15      0.25        54\n",
+      "Scottish National Party       0.80      0.55      0.65       136\n",
       "\n",
       "               accuracy                           0.81      1617\n",
-      "              macro avg       0.80      0.57      0.61      1617\n",
+      "              macro avg       0.82      0.58      0.63      1617\n",
       "           weighted avg       0.81      0.81      0.79      1617\n",
       "\n"
      ]
@@ -343,7 +323,7 @@
     "vectorizer = TfidfVectorizer(\n",
     "    tokenizer=custom_tokenizer_nltk, \n",
     "    preprocessor=None, lowercase=False, stop_words=None, \n",
-    "    max_features=3000, ngram_range=(1, 3)\n",
+    "    max_features=3000, ngram_range=(1, 3), min_df=3\n",
     "    )\n",
     "\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
@@ -355,58 +335,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "304b9cbc",
-   "metadata": {},
-   "source": [
-    "unigrams\n",
-    "Random Forest classifier\n",
-    "f1 score: 0.43523748230145454\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.5899504098866261\n",
-    "bigrams\n",
-    "Random Forest classifier\n",
-    "f1 score: 0.4960422798007194\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.6227610514154456\n",
-    "trigrams\n",
-    "Random Forest classifier\n",
-    "f1 score: 0.5051579755563204 \n",
-    "down to 0.4900020900816393 if vectorizer token len >2 insted of >1 \n",
-    "down to 0.4762973139164108 if not applying lemmatization to tokenizer \n",
-    "SVM linear classifier\n",
-    "f1 score: 0.6252689802421786\n",
-    "down to 0.6095657098971895 if tokenizer len >2 insted of >1\n",
-    "down to 0.5829744192780167 if not applying lemmatization to tokenizer\n",
-    "\n",
-    "min_df: improves SVM not RF\n",
-    "3 0.48263671992623136 worst\n",
-    "3 0.6267792919500319 best \n",
-    "\n",
-    "Training with weighted_class: balanced\n",
-    "Random Forest classifier\n",
-    "f1 score: 0.517423061055631\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.7173873440581564\n",
-    "\n",
-    "with Stopwords English in Vectorizer:\n",
-    "Random Forest classifier\n",
-    "f1 score: 0.5131065386234979\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.6080800017134234"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0bf8d04",
-   "metadata": {},
-   "source": [
-    "After running diffrent values, the reducuction of very common words doesn't make any changes. But performance improves for the SVM classifier removing tokens present in fewer that 3 documments and decreces for the Random Forest classifier."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "17e10f7f",
    "metadata": {},
    "outputs": [],
@@ -427,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "5a8ea34a",
    "metadata": {},
    "outputs": [
@@ -447,19 +377,11 @@
     "\n",
     "# features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
     "\n",
-    "# random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11e59bd2",
-   "metadata": {},
-   "source": [
-    "Lower performance and less efficient using spaCy.\n",
-    "Random Forest classifier\n",
-    "f1 score: 0.468484258108505\n",
-    "SVM linear classifier\n",
-    "f1 score: 0.5432385082627259"
+    "# random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)\n",
+    "\n",
+    "# Lower performance and less efficient using spaCy.\n",
+    "# Random Forest classifier f1 score: 0.468484258108505\n",
+    "# SVM linear classifier f1 score: 0.5432385082627259"
    ]
   }
  ],
